# flask-blog

./: .gitignore  Dockerfile  README.md  pyproject.toml
blog/: __init__.py  auth.py  blog.py  db.py
blog/templates/: base.html
blog/templates/auth/: error.html  login.html  register.html
blog/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
