[project]
name = "blog"
version = "1.0.1"
description = "blog posts project"
requires-python = ">=3.11"
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["blog"]